<resources>
    <string name="app_name">Bible</string>
    <string name="welcome_screen_header">BIBLE</string>
    <string name="creator_text">Made by Artem Polovin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_ic_title">Books</string>
    <string name="search_ic_title">Search</string>
    <string name="prev_page"><![CDATA[< Prev chapter]]></string>
    <string name="next_page"><![CDATA[Next chapter >]]></string>
    <string name="search_scripture_hint">Enter the text of scripture</string>
    <string name="search_place_of_scripture_header">Search place of scripture</string>
    <string name="search_button_text">search</string>
    <string name="error_text">Nothing was found</string>
    <string name="char_seek_bar_text">Char match percentage</string>
    <string name="word_seek_bar_text">Word match percentage</string>
    <string name="read_bible_text">Reade Bible</string>
    <string name="home_ic_home">Home</string>
    <string name="home_header">Home</string>
    <string name="choose_book_title_menu">Choose book</string>
    <string name="new_topic">New topic</string>
    <string name="hint_topic">Topic</string>
    <string name="error_topics">Error!! Please try again</string>
    <string name="note_topics_tittle">Note Topics</string>
    <string name="hint_note">Enter text</string>
    <string name="hint_note_page_title">Enter title</string>
    <string name="note_list_actionbar_title">Note list</string>
    <string name="write_note_actionbar_title">Write note</string>

</resources>