<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/search_place_of_scripture_header"
                android:textColor="@color/color_primery_white"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_view_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="110dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_char_seek_bar_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="80%"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/char_seek_bar"
                app:layout_constraintTop_toTopOf="@id/char_seek_bar"
                app:layout_constraintBottom_toBottomOf="@+id/char_seek_bar" />

            <TextView
                android:id="@+id/text_char_seek_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/char_seek_bar_text"
                android:layout_marginTop="58dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <SeekBar
                android:id="@+id/char_seek_bar"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:max="100"
                android:progress="80"
                android:progressDrawable="@drawable/track"
                android:thumb="@drawable/thumb"
                android:indeterminate="false"
                app:layout_constraintTop_toBottomOf="@id/text_char_seek_bar"
                app:layout_constraintStart_toStartOf="@+id/text_char_seek_bar"
                app:layout_constraintEnd_toEndOf="@+id/text_char_seek_bar"/>

            <TextView
                android:id="@+id/text_word_seek_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_seek_bar_text"
                android:layout_marginTop="26dp"
                app:layout_constraintTop_toBottomOf="@+id/char_seek_bar"
                app:layout_constraintStart_toStartOf="@+id/char_seek_bar"
                app:layout_constraintEnd_toEndOf="@id/char_seek_bar" />

            <SeekBar
                android:id="@+id/word_seek_bar"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:max="100"
                android:progress="80"
                android:progressDrawable="@drawable/track"
                android:thumb="@drawable/thumb"
                android:indeterminate="false"
                app:layout_constraintTop_toBottomOf="@id/text_word_seek_bar"
                app:layout_constraintStart_toStartOf="@+id/char_seek_bar"
                app:layout_constraintEnd_toEndOf="@+id/char_seek_bar"/>

            <TextView
                android:id="@+id/text_word_seek_bar_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="80%"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/word_seek_bar"
                app:layout_constraintTop_toTopOf="@id/word_seek_bar"
                app:layout_constraintBottom_toBottomOf="@+id/word_seek_bar" />


            <EditText
                android:id="@+id/edit_search_scripture"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/search_scripture_edit_text_background"
                android:gravity="top"
                android:hint="@string/search_scripture_hint"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/word_seek_bar" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:background="@drawable/search_button_background"
                android:text="@string/search_button_text"
                android:textColor="@color/color_primery_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_search_scripture" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/error_text"
                android:textColor="@color/error_text_color"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_scripture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

